<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">#2 Galxy Gear Data Collection </string>
    <string name="start_data_collection">Start Collection</string>
    <string name="stop_data_collection">Stop Collection</string>
    <string name="check_data_collection">Check Collection</string>
    <string name="question1">Question 1</string>
    <string name="question2">Question 2</string>
    <string name="question3">Question 3</string>
    <string name="question4">Question 4</string>
    <string name="set_alarm">Set Repeating Alarm</string>
    <string name="cancel_alarm">Cancel Repeating Alarm</string>
    <string name="cancelAlarm">Cancel Alarm</string>

    <string-array name="spinnerArray2">
        <item> Tap to Choose</item>
        <item> Yes</item>
        <item> No</item>
    </string-array>
    <string-array name="spinnerArray3">
        <item> Tap to Choose</item>
        <item> Forgot but will</item>
        <item> Too Sick</item>
        <item> No Pills</item>
        <item> Other</item>
    </string-array>
    <string-array name="spinnerArray4">
        <item> Tap to Choose</item>
        <item> Very Well</item>
        <item> Good</item>
        <item> Okey</item>
        <item> Bad</item>
        <item> Very Bad</item>
    </string-array>
    <string-array name="spinnerArrayAM1d">
        <item> A. Low Appetite </item>
        <item> B. Eating is Painful</item>
        <item> C. Problem Chewing</item>
        <item> D. None of the above</item>
    </string-array>
    <string-array name="spinnerArrayPM2d">
        <item> A. Orange, chair, pencil </item>
        <item> B. Apple, table, penny</item>
        <item> C. Red, sunrise, grape</item>
    </string-array>
    <string-array name="spinnerArrayAM5d">
        <item> A. Bed or Chair Bound </item>
        <item> B. I am able to get up but I dont go out</item>
        <item> C. I go out</item>
    </string-array>
    <string-array name="spinnerArrayPM6d">
        <item> A. Apple, Table, Coin </item>
        <item> B. Red, Brush, Hat </item>
        <item> C. Orange, Flower, Pencil</item>
    </string-array>
    
    <string-array name="spinnerArrayTest">
        <item> A. First </item>
        <item> B. Second</item>
        <item> C. Third</item>
        <item> D. Fourth</item>
    </string-array>

    <string name="title_activity_initial_test">InitialTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
