<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_start_data_collection"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/start_data_collection"/>
    <item
        android:id="@+id/action_stop_data_collection"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/stop_data_collection"/>
    <item
        android:id="@+id/action_check_data_collection"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/check_data_collection"/>
    <item
        android:id="@+id/action_set_alarm"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/set_alarm"/>
        
    <item
        android:id="@+id/action_cancel_alarm"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/cancel_alarm"/>
</menu>